Fixed the Amount Precision to 3 digits

--- a/YandS.UI/Views/Finance/PayVoucherCreateIntra.cshtml
+++ b/YandS.UI/Views/Finance/PayVoucherCreateIntra.cshtml
@@ -337,7 +337,7 @@
             var p_Amt = $("#Amount").val() == "" ? 0 : parseFloat($("#Amount").val());
             var p_VarAmt = $("#VatAmount").val() == "" ? 0 : parseFloat($("#VatAmount").val());
 
-            var p_TtlAmt = p_Amt + p_VarAmt;
+            var p_TtlAmt = (p_Amt + p_VarAmt).toFixed(3);
 
             $("#TotalAmount").val(p_TtlAmt);
 
