--- a/YandS.UI/Views/CourtCases/ENFInfoStage.cshtml
+++ b/YandS.UI/Views/CourtCases/ENFInfoStage.cshtml
@@ -1037,7 +1037,7 @@
         var p_Amt = $("#PVDetail_Amount").val() == "" ? 0 : parseFloat($("#PVDetail_Amount").val());
         var p_VarAmt = $("#PVDetail_VatAmount").val() == "" ? 0 : parseFloat($("#PVDetail_VatAmount").val());
 
-        var p_TtlAmt = p_Amt + p_VarAmt;
+        var p_TtlAmt = (p_Amt + p_VarAmt).toFixed(3);
 
         $("#PVDetail_TotalAmount").val(p_TtlAmt);
 
