--- a/YandS.UI/Views/Finance/_PayVoucherCreateNEW.cshtml
+++ b/YandS.UI/Views/Finance/_PayVoucherCreateNEW.cshtml
@@ -434,7 +434,7 @@
                 return false;
             }
             else {
-                if ($("#Payment_Head").val() == "10007" || $("#Payment_Head").val() == "10018")
+                if ($("#Payment_Head").val() == "10007")
                     $("#VoucherType").val("1");
                 else
                     $("#VoucherType").val("2");
