--- a/YandS.UI/Views/CourtCases/DefendantTransfer.cshtml
+++ b/YandS.UI/Views/CourtCases/DefendantTransfer.cshtml
@@ -3,7 +3,164 @@
     var table2;
     var dataForTable = "ENF-DEFTRANS";
     var dataForTable2 = "ENF-DEFTRANS2";
+
+    function LoadResultTable() {
+        if (typeof table2 != 'undefined')
+            table2.destroy();
+
+        table2 = $('#HtmlTable2').DataTable({
+            "processing": true,
+            "serverSide": true,
+            "filter": true,
+            "orderMulti": false,
+            "destroy": true,
+            "ordering": true,
+            "pageLength": 99999,
+            dom: "<'row'<'col-sm-4'l><'col-sm-7 text-right'f><'col-sm-1 text-right'B>>" +
+                "<'row'<'col-sm-12'tr>>" +
+                "<'row'<'col-sm-5'i><'col-sm-7'p>>",
+            buttons: [
+                {
+                    extend: 'excel',
+                    title: 'TRANSFER COMPLETED الموكل استلم التحويل',
+                    text: 'Print',
+                    className: 'btn-pink-moon',
+                    titleAttr: 'Export Excel',
+                    "oSelectorOpts": { filter: 'applied', order: 'current' },
+                    exportOptions: { modifier: { page: 'all', search: 'none' } }
+                }
+            ],
+            "lengthMenu": [[5, 10, 25, 50, 100, 99999], [5, 10, 25, 50, 100, 'ALL']],
+            "ajax": {
+                "url": GetIndexDataURL,
+                "type": "POST",
+                "datatype": "json",
+                data: function (d) {
+                    d.DataTableName = dataForTable2;
+                    d.LocationId = $('#txtUserRole').val() == "VoucherApproval" ? $('input[name="rdoLocation"]:checked').val() : $('#txtLocationId').val();
+                    d.ClientCode = $('#ENF_SEARCH_ClientCode').val();
+                    d.AgainstCode = $('#ENF_SEARCH_AgainstCode').val();
+                    d.DateFrom = $("#ContactDateFrom").val();
+                    d.DateTo = $("#ContactDateTo").val();
+                }
+            },
+            "columns": [
+                { data: 'OfficeFileNo', name: 'OfficeFileNo', autoWidth: true },
+                { data: 'ClientName', name: 'ClientName', autoWidth: true },
+                { data: 'DefClientName', name: 'DefClientName', autoWidth: true },
+                { data: 'COURT', name: 'COURT', autoWidth: true },
+                { data: 'CourtRefNo', name: 'CourtRefNo', autoWidth: true },
+                { data: 'MoneyWithName', name: 'MoneyWithName', autoWidth: true },
+                { data: 'TransferDate', name: 'TransferDate', autoWidth: true },
+                { data: 'MoneyTrCompleteDate', name: 'MoneyTrCompleteDate', autoWidth: true },
+                { data: 'Amount', name: 'Amount', autoWidth: true }
+            ],
+            "order": [],
+            "columnDefs": [
+                { 'orderable': false, 'targets': '_all' },
+                { "className": "dt-center", "targets": "_all" },
+                {
+                    render: function (data, type, full, meta) {
+                        return "<div class='text-wrap'>" + data + "</div>";
+                    },
+                    targets: 1
+                },
+                {
+                    render: function (data, type, full, meta) {
+                        return "<div class='text-wrap'>" + data + "</div>";
+                    },
+                    targets: 2
+                },
+                {
+                    render: function (data) {
+                        if (data)
+                            return moment(data).format('DD/MM/YYYY');
+                        else
+                            return "";
+                    },
+                    targets: 6
+                },
+                {
+                    render: function (data) {
+                        if (data)
+                            return moment(data).format('DD/MM/YYYY');
+                        else
+                            return "";
+                    },
+                    targets: 7
+                }
+            ],
+            //"createdRow": function (row, data, dataIndex) {
+            //    var rowColor = "";
+
+            //    if (data.ToBeRegisterDays >= 90) {
+            //        rowColor = "tblFirstCondition";
+            //    }
+            //    else {
+            //        if (data.ToBeRegisterDays >= 60 && data.ToBeRegisterDays < 90) {
+            //            rowColor = "tblSecondCondition";
+            //        }
+            //        else {
+            //            if (data.ToBeRegisterDays >= 30 && data.ToBeRegisterDays < 60) {
+            //                rowColor = "tblThirdCondition";
+            //            }
+            //        }
+            //    }
+
+            //    $(row).addClass(rowColor);
+            //},
+            initComplete: function () {
+                console.log("DataTable Initiated !!");
+                $('.btn').bstooltip();
+
+                var info = table2.page.info();
+
+                var MCTRecords = table2.ajax.json().MuscatTotal;
+                var SLLRecords = table2.ajax.json().SalalahTotal;
+                var recordsTotal = table2.ajax.json().recordsTotal;
+
+
+
+                $('#TTL2').text(recordsTotal);
+
+                if ($("#txtUserRole").val() == "VoucherApproval") {
+                    $('#MCTTTL2').text("MUSCAT : " + MCTRecords);
+                    $('#SLLTTL2').text("SALALAH : " + SLLRecords);
+                }
+
+
+                $("#HtmlTable2_filter.dataTables_filter input")
+                    .unbind() // Unbind previous default bindings
+                    .bind("keyup", function (e) { // Bind our desired behavior
+                        //console.log(e.keyCode);
+                        // this.value.length >= 3 || If the length is 3 or more characters, or the user pressed ENTER, search
+                        if (e.keyCode == 13) {
+                            // Call the API search function
+                            table2.search(this.value).draw();
+                        }
+                        // Ensure we clear the search if they backspace far enough
+                        if (this.value == "") {
+                            table2.search("").draw();
+                        }
+                        return;
+                    });
+            }
+        });
+    }
+
     $(document).ready(function () {
+        $('.datepicker').datepicker({
+            format: "dd/mm/yyyy",
+            todayBtn: "linked",
+            clearBtn: true,
+            autoclose: true,
+            orientation: "bottom auto"
+        });
+
+        $('.select2bs4').select2({
+            theme: 'bootstrap4'
+        });
+
         if (typeof table != 'undefined')
             table.destroy();
 
@@ -170,144 +327,6 @@
             }
         });
 
-        if (typeof table2 != 'undefined')
-            table2.destroy();
-
-        table2 = $('#HtmlTable2').DataTable({
-            "processing": true,
-            "serverSide": true,
-            "filter": true,
-            "orderMulti": false,
-            "destroy": true,
-            "ordering": true,
-            "pageLength": 99999,
-            dom: "<'row'<'col-sm-4'l><'col-sm-7 text-right'f><'col-sm-1 text-right'B>>" +
-                "<'row'<'col-sm-12'tr>>" +
-                "<'row'<'col-sm-5'i><'col-sm-7'p>>",
-            buttons: [
-                {
-                    extend: 'excel',
-                    title: 'TRANSFER COMPLETED الموكل استلم التحويل',
-                    text: 'Print',
-                    className: 'btn-pink-moon',
-                    titleAttr: 'Export Excel',
-                    "oSelectorOpts": { filter: 'applied', order: 'current' },
-                    exportOptions: { modifier: { page: 'all', search: 'none' } }
-                }
-            ],
-            "lengthMenu": [[5, 10, 25, 50, 100, 99999], [5, 10, 25, 50, 100, 'ALL']],
-            "ajax": {
-                "url": GetIndexDataURL,
-                "type": "POST",
-                "datatype": "json",
-                data: function (d) {
-                    d.DataTableName = dataForTable2;
-                    d.LocationId = $('#txtUserRole').val() == "VoucherApproval" ? $('input[name="rdoLocation"]:checked').val() : $('#txtLocationId').val();
-                }
-            },
-            "columns": [
-                { data: 'OfficeFileNo', name: 'OfficeFileNo', autoWidth: true },
-                { data: 'ClientName', name: 'ClientName', autoWidth: true },
-                { data: 'DefClientName', name: 'DefClientName', autoWidth: true },
-                { data: 'COURT', name: 'COURT', autoWidth: true },
-                { data: 'CourtRefNo', name: 'CourtRefNo', autoWidth: true },
-                { data: 'MoneyWithName', name: 'MoneyWithName', autoWidth: true },
-                { data: 'TransferDate', name: 'TransferDate', autoWidth: true },
-                { data: 'MoneyTrCompleteDate', name: 'MoneyTrCompleteDate', autoWidth: true },
-                { data: 'Amount', name: 'Amount', autoWidth: true }
-            ],
-            "order": [],
-            "columnDefs": [
-                { 'orderable': false, 'targets': '_all' },
-                { "className": "dt-center", "targets": "_all" },
-                {
-                    render: function (data, type, full, meta) {
-                        return "<div class='text-wrap'>" + data + "</div>";
-                    },
-                    targets: 1
-                },
-                {
-                    render: function (data, type, full, meta) {
-                        return "<div class='text-wrap'>" + data + "</div>";
-                    },
-                    targets: 2
-                },
-                {
-                    render: function (data) {
-                        if (data)
-                            return moment(data).format('DD/MM/YYYY');
-                        else
-                            return "";
-                    },
-                    targets: 6
-                },
-                {
-                    render: function (data) {
-                        if (data)
-                            return moment(data).format('DD/MM/YYYY');
-                        else
-                            return "";
-                    },
-                    targets: 7
-                }
-            ],
-            //"createdRow": function (row, data, dataIndex) {
-            //    var rowColor = "";
-
-            //    if (data.ToBeRegisterDays >= 90) {
-            //        rowColor = "tblFirstCondition";
-            //    }
-            //    else {
-            //        if (data.ToBeRegisterDays >= 60 && data.ToBeRegisterDays < 90) {
-            //            rowColor = "tblSecondCondition";
-            //        }
-            //        else {
-            //            if (data.ToBeRegisterDays >= 30 && data.ToBeRegisterDays < 60) {
-            //                rowColor = "tblThirdCondition";
-            //            }
-            //        }
-            //    }
-
-            //    $(row).addClass(rowColor);
-            //},
-            initComplete: function () {
-                console.log("DataTable Initiated !!");
-                $('.btn').bstooltip();
-
-                var info = table2.page.info();
-
-                var MCTRecords = table2.ajax.json().MuscatTotal;
-                var SLLRecords = table2.ajax.json().SalalahTotal;
-                var recordsTotal = table2.ajax.json().recordsTotal;
-
-
-
-                $('#TTL2').text(recordsTotal);
-
-                if ($("#txtUserRole").val() == "VoucherApproval") {
-                    $('#MCTTTL2').text("MUSCAT : " + MCTRecords);
-                    $('#SLLTTL2').text("SALALAH : " + SLLRecords);
-                }
-                
-
-                $("#HtmlTable2_filter.dataTables_filter input")
-                    .unbind() // Unbind previous default bindings
-                    .bind("keyup", function (e) { // Bind our desired behavior
-                        //console.log(e.keyCode);
-                        // this.value.length >= 3 || If the length is 3 or more characters, or the user pressed ENTER, search
-                        if (e.keyCode == 13) {
-                            // Call the API search function
-                            table2.search(this.value).draw();
-                        }
-                        // Ensure we clear the search if they backspace far enough
-                        if (this.value == "") {
-                            table2.search("").draw();
-                        }
-                        return;
-                    });
-            }
-        });
-
         $('#HtmlTable.table tbody').on('click', '.btnLink', function () {
             var _Mode = this.id.split('_')[0];
             var _id = parseInt(this.id.split('_')[1]);
@@ -321,8 +340,43 @@
             processbtnLinkClick(_Mode, data, dataForTable);
             return false;
         });
+
+
+
+        $("#ContactDateFrom").datepicker({
+            todayBtn: 1,
+            autoclose: true,
+        }).on('changeDate', function (selected) {
+            console.log(selected.date);
+            if (selected.date !== undefined) {
+                var minDate = new Date(selected.date.valueOf());
+                $('#ContactDateTo').datepicker('setStartDate', minDate);
+            }
+            else {
+                $('#ContactDateTo').datepicker('setDate', null);
+            }
+        });
+
+        $("#ContactDateTo").datepicker({
+            autoclose: true
+        }).on('changeDate', function (selected) {
+            if (selected.date !== undefined) {
+                var maxDate = new Date(selected.date.valueOf());
+                $('#ContactDateFrom').datepicker('setEndDate', maxDate);
+            }
+            else {
+                $('#ContactDateFrom').datepicker('setDate', null);
+            }
+        });
+
+        $('#btnPrintResult').on("click", function () {
+            LoadResultTable();
+        });
+
+        LoadResultTable();
     });
 </script>
+@model YandS.UI.Models.ToBeRegisterVM
 <div style="padding-bottom:0px;padding-top:10px;" class="row DefendantTransferActive">
     <div class="col-sm-3 text-left"><h3><span id="MCTTTL"></span></h3></div>
     <div class="col-sm-6 text-center"><h3>MONEY TRANSFER FROM COURT طلب تحويل من خزانة المحكمة</h3></div>
@@ -360,6 +414,35 @@
 </div>
 <div style="padding-bottom:0px;padding-top:10px;" class="row DefendantTransferActive">
     <div class="col-sm-12 text-center"><h3><span id="TTL2"></span></h3></div>
+</div>
+<div style="padding-bottom:0px;padding-top:10px;" class="row">
+    <div class="col">
+        <div class="form-group">
+            <label for="ClientCode">CLIENT NAME</label>
+            @Html.DropDownList("ENF_SEARCH_ClientCode", null, htmlAttributes: new { @class = "form-control select2bs4" })
+        </div>
+    </div>
+    <div class="col">
+        <div class="form-group">
+            <label for="ClientCode">AGAINST</label>
+            @Html.DropDownList("ENF_SEARCH_AgainstCode", null, htmlAttributes: new { @class = "form-control select2bs4" })
+        </div>
+    </div>
+    <div class="col">
+        <div class="form-group">
+            <label for="ContactDateFrom">FROM</label>
+            @Html.EditorFor(model => model.ContactDateFrom, new { htmlAttributes = new { @class = "form-control datepicker" } })
+        </div>
+    </div>
+    <div class="col">
+        <div class="form-group">
+            <label for="ContactDateTo">TO</label>
+            @Html.EditorFor(model => model.ContactDateTo, new { htmlAttributes = new { @class = "form-control datepicker" } })
+        </div>
+    </div>
+    <div class="col" style="padding-top:30px;">
+        <button id="btnPrintResult" type="button" class="btn btn-success"><i class="fas fa-file"></i> SHOW</button>
+    </div>
 </div>
 <div class="row">
     <div style="padding-bottom:0px;padding-top:10px;" class="col-sm-12">
