added User 2 and 3 for C reating new cases

--- a/YandS.UI/Views/CourtCases/Index.cshtml
+++ b/YandS.UI/Views/CourtCases/Index.cshtml
@@ -2101,7 +2101,7 @@
             });
 
             console.log($("#hidUserName").val());
-            var AllowedUsers = ["1", "5", "6", "35", "37"];
+            var AllowedUsers = ["1","2","3", "5", "6", "35", "37"];
             $("#DIVCreateCase").removeClass("disableDIV").addClass("disableDIV");
             if (AllowedUsers.indexOf($("#hidUserName").val()) >= 0) {
                 $("#DIVCreateCase").removeClass("disableDIV");
