Completed Support changes

--- a/YandS.UI/Views/CaseReports/_litigation.cshtml
+++ b/YandS.UI/Views/CaseReports/_litigation.cshtml
@@ -272,5 +272,7 @@
         <button type="button" id="btnNBORep" class="btn btn-outline-info btnGenerateReport"><i class="fas fa-file-archive"></i> NBO REPORT</button>
         <button type="button" id="btnUFRep" class="btn btn-warning btnGenerateReport"><i class="fas fa-file-archive"></i> UNITED FINANCE REPORT</button>
         <button type="button" id="btnBDRep" class="btn btn-info btnGenerateReport"><i class="fas fa-file-archive"></i> BANK DHOFAR REPORT</button>
+        <button type="button" id="btnFABRep" class="btn btn-success btnGenerateReport"><i class="fas fa-file-archive"></i> FAB REPORT</button>
+
     </div>
 </div>
