Completed UFC Report

--- a/YandS.UI/Views/CaseReports/_litigation.cshtml
+++ b/YandS.UI/Views/CaseReports/_litigation.cshtml
@@ -273,6 +273,7 @@
         <button type="button" id="btnUFRep" class="btn btn-warning btnGenerateReport"><i class="fas fa-file-archive"></i> UNITED FINANCE REPORT</button>
         <button type="button" id="btnBDRep" class="btn btn-info btnGenerateReport"><i class="fas fa-file-archive"></i> BANK DHOFAR REPORT</button>
         <button type="button" id="btnFABRep" class="btn btn-success btnGenerateReport"><i class="fas fa-file-archive"></i> FAB REPORT</button>
+        <button type="button" id="btnUFCRep" class="btn btn-success btnGenerateReport"><i class="fas fa-file-archive"></i> UNITED FINANCE REPORT(NEW)</button>
 
     </div>
 </div>
