--- a/YandS.UI/Views/Finance/_QuarterltVAT.cshtml
+++ b/YandS.UI/Views/Finance/_QuarterltVAT.cshtml
@@ -210,33 +210,34 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="row">
-                                <div class="col-sm-4">
+                                <div class="col-sm-4 AppHidden">
                                     <div class="form-group">
                                         <label for="LAW_FEE_1_TO_3">LAWYER FEES</label>
                                         <h3><span class="form-control" id="LAW_FEE_1_TO_3" disabled></span></h3>
                                     </div>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-6">
                                     <div class="form-group">
                                         <label for="LAW_VAT_1_TO_3">LAWYER FEES VAT</label>
                                         <h3><span class="form-control" id="LAW_VAT_1_TO_3" disabled></span></h3>
                                     </div>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label for="EXP_VAT_1_TO_3">EXPENSE VAT</label>
+                                        <h3><span class="form-control" id="EXP_VAT_1_TO_3" disabled></span></h3>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4 AppHidden">
                                     <div class="form-group">
                                         <label for="LAW_VAT_TTL_1_TO_3">TOTAL</label>
                                         <h3><span class="form-control" id="LAW_VAT_TTL_1_TO_3" disabled></span></h3>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row AppHidden">
                                 <div class="col-sm-4"></div>
-                                <div class="col-sm-4">
-                                    <div class="form-group">
-                                        <label for="EXP_VAT_1_TO_3">EXPENSE VAT</label>
-                                        <h3><span class="form-control" id="EXP_VAT_1_TO_3" disabled></span></h3>
-                                    </div>
-                                </div>
+                                
                                 <div class="col-sm-4"></div>
                             </div>
                         </div>
@@ -264,33 +265,34 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="row">
-                                <div class="col-sm-4">
+                                <div class="col-sm-4 AppHidden">
                                     <div class="form-group">
                                         <label for="LAW_FEE_4_TO_6">LAWYER FEES</label>
                                         <h3><span class="form-control" id="LAW_FEE_4_TO_6" disabled></span></h3>
                                     </div>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-6">
                                     <div class="form-group">
                                         <label for="LAW_VAT_4_TO_6">LAWYER FEES VAT</label>
                                         <h3><span class="form-control" id="LAW_VAT_4_TO_6" disabled></span></h3>
                                     </div>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label for="EXP_VAT_4_TO_6">EXPENSE VAT</label>
+                                        <h3><span class="form-control" id="EXP_VAT_4_TO_6" disabled></span></h3>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4 AppHidden">
                                     <div class="form-group">
                                         <label for="LAW_VAT_TTL_4_TO_6">TOTAL</label>
                                         <h3><span class="form-control" id="LAW_VAT_TTL_4_TO_6" disabled></span></h3>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row AppHidden">
                                 <div class="col-sm-4"></div>
-                                <div class="col-sm-4">
-                                    <div class="form-group">
-                                        <label for="EXP_VAT_4_TO_6">EXPENSE VAT</label>
-                                        <h3><span class="form-control" id="EXP_VAT_4_TO_6" disabled></span></h3>
-                                    </div>
-                                </div>
+                                
                                 <div class="col-sm-4"></div>
                             </div>
                         </div>
@@ -318,33 +320,34 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="row">
-                                <div class="col-sm-4">
+                                <div class="col-sm-4 AppHidden">
                                     <div class="form-group">
                                         <label for="LAW_FEE_7_TO_9">LAWYER FEES</label>
                                         <h3><span class="form-control" id="LAW_FEE_7_TO_9" disabled></span></h3>
                                     </div>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-6">
                                     <div class="form-group">
                                         <label for="LAW_VAT_7_TO_9">LAWYER FEES VAT</label>
                                         <h3><span class="form-control" id="LAW_VAT_7_TO_9" disabled></span></h3>
                                     </div>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label for="EXP_VAT_7_TO_9">EXPENSE VAT</label>
+                                        <h3><span class="form-control" id="EXP_VAT_7_TO_9" disabled></span></h3>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4 AppHidden">
                                     <div class="form-group">
                                         <label for="LAW_VAT_TTL_7_TO_9">TOTAL</label>
                                         <h3><span class="form-control" id="LAW_VAT_TTL_7_TO_9" disabled></span></h3>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row AppHidden">
                                 <div class="col-sm-4"></div>
-                                <div class="col-sm-4">
-                                    <div class="form-group">
-                                        <label for="EXP_VAT_7_TO_9">EXPENSE VAT</label>
-                                        <h3><span class="form-control" id="EXP_VAT_7_TO_9" disabled></span></h3>
-                                    </div>
-                                </div>
+                                
                                 <div class="col-sm-4"></div>
                             </div>
                         </div>
@@ -372,33 +375,34 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="row">
-                                <div class="col-sm-4">
+                                <div class="col-sm-4 AppHidden">
                                     <div class="form-group">
                                         <label for="LAW_FEE_10_TO_12">LAWYER FEES</label>
                                         <h3><span class="form-control" id="LAW_FEE_10_TO_12" disabled></span></h3>
                                     </div>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-6">
                                     <div class="form-group">
                                         <label for="LAW_VAT_10_TO_12">LAWYER FEES VAT</label>
                                         <h3><span class="form-control" id="LAW_VAT_10_TO_12" disabled></span></h3>
                                     </div>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label for="EXP_VAT_10_TO_12">EXPENSE VAT</label>
+                                        <h3><span class="form-control" id="EXP_VAT_10_TO_12" disabled></span></h3>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4 AppHidden">
                                     <div class="form-group">
                                         <label for="LAW_VAT_TTL_10_TO_12">TOTAL</label>
                                         <h3><span class="form-control" id="LAW_VAT_TTL_10_TO_12" disabled></span></h3>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row AppHidden">
                                 <div class="col-sm-4"></div>
-                                <div class="col-sm-4">
-                                    <div class="form-group">
-                                        <label for="EXP_VAT_10_TO_12">EXPENSE VAT</label>
-                                        <h3><span class="form-control" id="EXP_VAT_10_TO_12" disabled></span></h3>
-                                    </div>
-                                </div>
+                                
                                 <div class="col-sm-4"></div>
                             </div>
                         </div>
@@ -430,33 +434,34 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="row">
-                                <div class="col-sm-4">
+                                <div class="col-sm-4 AppHidden">
                                     <div class="form-group">
                                         <label for="LAW_FEE_1_TO_12">LAWYER FEES</label>
                                         <h3><span class="form-control" id="LAW_FEE_1_TO_12" disabled></span></h3>
                                     </div>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-6">
                                     <div class="form-group">
                                         <label for="LAW_VAT_1_TO_12">LAWYER FEES VAT</label>
                                         <h3><span class="form-control" id="LAW_VAT_1_TO_12" disabled></span></h3>
                                     </div>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label for="EXP_VAT_1_TO_12">EXPENSE VAT</label>
+                                        <h3><span class="form-control" id="EXP_VAT_1_TO_12" disabled></span></h3>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4 AppHidden">
                                     <div class="form-group">
                                         <label for="LAW_VAT_TTL_1_TO_12">TOTAL</label>
                                         <h3><span class="form-control" id="LAW_VAT_TTL_1_TO_12" disabled></span></h3>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row AppHidden">
                                 <div class="col-sm-4"></div>
-                                <div class="col-sm-4">
-                                    <div class="form-group">
-                                        <label for="EXP_VAT_1_TO_12">EXPENSE VAT</label>
-                                        <h3><span class="form-control" id="EXP_VAT_1_TO_12" disabled></span></h3>
-                                    </div>
-                                </div>
+                                
                                 <div class="col-sm-4"></div>
                             </div>
                         </div>
